Validate presence/validity of notice_date
As per the guidance in the GOV.UK Design System[1]: "Check the entire
date, not the day, month and year separately."

Note that if any/all of the day, month or year have been entered but
`notice_date` is empty then we can assume it's invalid because it
implies that parsing the date has failed.

[1]: https://design-system.service.gov.uk/components/date-input/#error-messages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -87,19 +87,8 @@ en:
               greater_than_or_equal_to: The mark-up percentage must be between 0 and 100
               less_than_or_equal_to: The mark-up percentage must be between 0 and 100
               not_a_number: The mark-up percentage must be a number
-            notice_date_day:
-              greater_than_or_equal_to: The day the agency were notified must be between 1 and 31
-              less_than_or_equal_to: The day the agency were notified must be between 1 and 31
-              not_a_number: The day the agency were notified must be a number
-              not_an_integer: The day the agency were notified must be a whole number
-            notice_date_month:
-              greater_than_or_equal_to: The month the agency were notified must be between 1 and 12
-              less_than_or_equal_to: The month the agency were notified must be between 1 and 12
-              not_a_number: The month the agency were notified must be a number
-              not_an_integer: The month the agency were notified must be a whole number
-            notice_date_year:
-              not_a_number: The year the agency were notified must be a number
-              not_an_integer: The year the agency were notified must be a whole number
+            notice_date:
+              invalid: Enter the date you notified the supplier of your intention to hire the worker and include a day, month and year
         supply_teachers/journey/worker_type:
           attributes:
             worker_type:
