--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -437,8 +437,9 @@ en:
         holiday_2_end_date_question_hint: Leave this blank if there weren't any holidays between the contract start date and the hire date
         holiday_2_start_date_question: What date did the second school holiday start?
         holiday_2_start_date_question_hint: Leave this blank if there weren't any holidays between the contract start date and the hire date
+        markup_percentage_icon: "%"
         markup_rate_question: What mark-up does the agency charge for the worker?
-        markup_rate_question_hint: This is the percentage fee you agreed with the supplier. For example, 40
+        markup_rate_question_hint: This is the percentage fee you agreed with the supplier. For example, 20
         notice_date_question: What date did you notify the supplier that you wish to hire the worker?
         notice_date_question_hint: Leave this blank if you haven't yet notified the supplier
       worker_type:
