--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -70,6 +70,7 @@ en:
               blank: Enter the date you want to hire the worker and include a day, month and year
             holiday_1_end_date:
               before_start_date: The end date of the first school holiday must be after the start date
+              blank_when_start_date_is_set: The end date of the first school holiday must be set when a start date is entered
               invalid: Enter the date the first school holiday ended and include a day, month and year
             holiday_1_start_date:
               invalid: Enter the date the first school holiday started and include a day, month and year
