--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,6 +72,7 @@ en:
               before_start_date: The end date of the first school holiday must be after the start date
               blank_when_start_date_is_set: The end date of the first school holiday must be set when a start date is entered
               invalid: Enter the date the first school holiday ended and include a day, month and year
+              without_corresponding_start_date: The end date of the first school holiday cannot be set without a corresponding start date
             holiday_1_start_date:
               invalid: Enter the date the first school holiday started and include a day, month and year
             holiday_2_end_date_day:
