--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -299,7 +299,7 @@ en:
           term: Term
           worker_type: Worker type
         inputs_header: Choices used to generate this list
-        mark-up_explanation_html: Results are sorted by mark-up from lowest to highest. Mark-up is the fee the supplier charges for their services. It's a percentage added to the worker's fee by the agency.
+        mark-up_explanation_html: Results are sorted by mark-up from lowest to highest. Mark-up is the fee the supplier charges for their services. It’s a percentage added to the worker’s fee by the agency.
         other_radius_html: 'Change this distance to: '
         page_title: Suppliers
         print: Print this page
@@ -321,7 +321,7 @@ en:
         worker_term_question: How long do you need the worker for?
         worker_type_question: What type of worker do you need?
       looking_for:
-        answer_calculate_temp_to_perm_fee: To calculate the fee you'll be charged if you make an agency worker permanent
+        answer_calculate_temp_to_perm_fee: To calculate the fee you’ll be charged if you make an agency worker permanent
         answer_managed_service_provider: An agency to manage all my needs - a ‘managed service provider’
         answer_worker: An agency to manage an individual worker
         page_title: What are you looking for?
@@ -338,7 +338,7 @@ en:
         answer_agency_payroll: 'Yes'
         answer_school_payroll: No, I want to put the worker on our payroll
         page_title: Do you want to put the worker on the school payroll?
-        question: Do you want the agency to manage the worker's pay?
+        question: Do you want the agency to manage the worker’s pay?
       school_postcode_agency_supplied_worker:
         page_title: What is your school postcode
         question: What is your school’s postcode?
@@ -348,7 +348,7 @@ en:
         question: What is your school’s postcode?
         question_hint: We use this to find agencies near to your school
       temp_to_perm_calculator:
-        contract_start_question: When did the worker's current contract start?
+        contract_start_question: When did the worker’s current contract start?
         contract_start_question_hint: For example, 31 3 1980
         day_rate_icon: "£"
         day_rate_question: What does the agency charge you per day for the worker?
@@ -358,18 +358,18 @@ en:
         hire_date_question: What date do you want to take the worker on permanently from?
         hire_date_question_hint: For example, 31 3 1980
         holiday_1_end_date_question: What date did the first school holiday end?
-        holiday_1_end_date_question_hint: Leave this blank if there weren't any holidays between the contract start date and the hire date
+        holiday_1_end_date_question_hint: Leave this blank if there weren’t any holidays between the contract start date and the hire date
         holiday_1_start_date_question: What date did the first school holiday start?
-        holiday_1_start_date_question_hint: Leave this blank if there weren't any holidays between the contract start date and the hire date
+        holiday_1_start_date_question_hint: Leave this blank if there weren’t any holidays between the contract start date and the hire date
         holiday_2_end_date_question: What date did the second school holiday end?
-        holiday_2_end_date_question_hint: Leave this blank if there weren't any holidays between the contract start date and the hire date
+        holiday_2_end_date_question_hint: Leave this blank if there weren’t any holidays between the contract start date and the hire date
         holiday_2_start_date_question: What date did the second school holiday start?
-        holiday_2_start_date_question_hint: Leave this blank if there weren't any holidays between the contract start date and the hire date
+        holiday_2_start_date_question_hint: Leave this blank if there weren’t any holidays between the contract start date and the hire date
         markup_percentage_icon: "%"
         markup_rate_question: What mark-up does the agency charge for the worker?
         markup_rate_question_hint: This is the percentage fee you agreed with the supplier. For example, 20
         notice_date_question: What date did you notify the supplier that you wish to hire the worker?
-        notice_date_question_hint: Leave this blank if you haven't yet notified the supplier
+        notice_date_question_hint: Leave this blank if you haven’t yet notified the supplier
       worker_type:
         answer_agency_supplied: 'Yes'
         answer_nominated_worker: No, I have a worker I want the agency to manage (a ‘nominated worker’)
