--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -392,5 +392,9 @@ en:
       neutral_vendors:
         column1: Job type
         column2: Supplier mark-up
+        do_next:
+          contact_supplier: contact the supplier for this worker and for all your future temporary recruitment needs
+          header: What to do next
+          sign_form_html: sign the <a href="%{form_url}">full version order form</a> (also available in the documents section of the <a href="%{framework_url}">CCS framework</a> as ‘RM3826 Supply Teachers - Order Form Template (Full Version).docx’)
         header: Neutral vendor managed service providers
         page_title: Neutral vendor managed service providers
