Add a cookies policy page to the site.
This takes the cookie policy from the CCS website and
copies it, adjusting it where relevant.

If we add a cookie banner, this will have to be updated.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -172,6 +172,8 @@ en:
     application:
       back: Back
       beta: beta
+      cookie_link: Cookies
+      cookie_link_aria_label: How we use cookies
       crown_copyright: "© Crown copyright"
       error_prefix: Error
       feedback_aria_label: Email your feedback on this service
