Add pro rata supplier day rate to temp-to-perm results page
In an attempt to clarify how the fee is calculated when the worker works
fewer than 5 days per week.

I wonder whether it'd be clearer to adjust the number of days
required/given (e.g. working 2 days a week would mean that 8 days notice
are required - 4 weeks x 2 days per week) instead of adjusting the day
rate. I've started exploring this in another branch but it's taking
quite a while so I'm making this change for now.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -344,6 +344,7 @@ en:
         between_9_and_12_weeks_and_no_notice_date: You're taking the worker on permanently within the first 12 working weeks so you can be charged a fee for taking the worker on permanently.
         between_9_and_12_weeks_and_not_enough_notice: You're taking the worker on permanently within the first 12 working weeks and you're not giving the supplier the required 4 weeks notice so you can be charged a fee for taking the worker on permanently.
         daily_supplier_fee: 'Supplier daily fee for the worker: %{fee} (based on the %{markup_rate} mark-up of the %{day_rate} daily cost for the worker)'
+        daily_supplier_fee_pro_rata: 'Pro rata supplier daily fee for the worker: %{fee} (based on the worker working %{days_per_week} days per week)'
         early_hire_chargeable_days: 'Days chargeable for early-hire: %{days}'
         header: Temp-to-perm fee
         lack_of_notice_chargeable_days: 'Days chargeable for lack of notice: %{days}'
