(fix) updated what to do next section for master vendor page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -425,11 +425,11 @@ en:
         column2: Supplier mark-up
       master_vendors:
         do_next:
-          competition_online: you can also run a competition fully online, using CCS’s esourcing tool
-          further_competition: run a further competition to select a supplier - there is advice from CCS on how to do this
+          competition_online_html: you can also do this online, <a href="%{esourcing_url}">using CCS’s esourcing tool</a>
+          further_competition_html: run a further competition to select a supplier - there is <a href="%{advice_url}">advice from CCS</a> on how to do this -
           header: What to do next
           more_help: Contact supplyteachers@crowncommercial.gov.uk if you need more help running a further competition.
-          sign_form_html: select a supplier and sign the <a href="%{form_url}">full version order form</a> (also available in the documents section of the <a href="%{framework_url}">CCS framework</a> as ‘RM3826 Supply Teachers - Order Form Template (Full Version).docx’)
+          sign_form_html: select a supplier and <a href="%{form_url}">sign the full version order form</a> listed in the documents section of the CCS framework as ‘RM3826 Supply Teachers - Order Form Template (Full Version) V1.docx’
         header: Master vendor managed service providers
         page_title: Master vendor managed service providers
       neutral_vendors:
