Use radio buttons for job type in agency_payroll step
The accessibility testing highlighted problems with the fairly long
entries in the list pushing the dropdown arrow off the screen on mobile
devices.

In addition, the GOV.UK Design System[1] says:

> The select component should only be used as a last resort in
public-facing services because research shows that some users find
selects very difficult to use.

[1]: https://design-system.service.gov.uk/components/select/#when-to-use-this-component

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,6 +29,8 @@ en:
               too_short: Please choose the services you require
         supply_teachers/journey/agency_payroll:
           attributes:
+            job_type:
+              blank: Select the type of worker you need
             location:
               invalid_location: Enter a valid postcode
         supply_teachers/journey/looking_for:
