--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -336,12 +336,12 @@ en:
         heading: CCS Marketplace private beta
     home:
       temp_to_perm_fee:
-        after_12_weeks_and_enough_notice: You're taking the worker on permanently after 12 working weeks and you're giving the supplier the required 4 weeks notice so you can't be charged a fee for taking the worker on permanently.
-        after_12_weeks_and_no_notice_date: You're taking the worker on permanently after 12 working weeks but you haven't said whether you're giving the supplier the required 4 weeks notice. If you don't notify the supplier by %{latest_notice_date} you might be charged a fee of up to %{max_fee} for taking the worker on permanently.
-        after_12_weeks_and_not_enough_notice: You're taking the worker on permanently after 12 working weeks but you're not giving the supplier the required 4 weeks notice so you can be charged a fee for taking the worker on permanently.
-        between_9_and_12_weeks_and_enough_notice: You're taking the worker on permanently within the first 12 working weeks of their contract so you can be charged a fee for taking the worker on permanently even though you're giving the supplier the 4 weeks notice they require.
-        between_9_and_12_weeks_and_no_notice_date: You're taking the worker on permanently within the first 12 working weeks so you can be charged a fee for taking the worker on permanently.
-        between_9_and_12_weeks_and_not_enough_notice: You're taking the worker on permanently within the first 12 working weeks and you're not giving the supplier the required 4 weeks notice so you can be charged a fee for taking the worker on permanently.
+        after_12_weeks_and_enough_notice: Based on the information you provided, you’re taking the worker on after 12 working weeks and giving 4 weeks’ notice, so you can’t be charged a fee under this deal.
+        after_12_weeks_and_no_notice_date: Based on the information you provided, you’re taking the worker on after 12 working weeks, but it’s not clear if you’re providing the supplier with 4 weeks’ notice.
+        after_12_weeks_and_not_enough_notice: Based on the information you provided, you’re taking the worker on after 12 working weeks, but you’re not giving 4 weeks’ notice, so you can be charged a fee.
+        between_9_and_12_weeks_and_enough_notice: Based on the information you provided, you’re taking the worker on within the first 12 working weeks of their contract, so you can be charged a fee even though you’ve given 4 weeks’ notice.
+        between_9_and_12_weeks_and_no_notice_date: Based on the information you provided, you’re taking on the worker permanently within their first 12 working weeks, so you can be charged a fee.
+        between_9_and_12_weeks_and_not_enough_notice: Based on the information you provided, you’re taking on the worker within their first 12 working weeks and are not giving 4 weeks’ notice, so you can be charged a fee.
         daily_supplier_fee: 'Supplier daily fee for the worker: %{fee} (based on the %{markup_rate} mark-up of the %{day_rate} daily cost for the worker)'
         daily_supplier_fee_pro_rata: 'Pro rata supplier daily fee for the worker: %{fee} (based on the worker working %{days_per_week} days per week)'
         early_hire_chargeable_days: 'Days chargeable for early-hire: %{days}'
@@ -353,7 +353,7 @@ en:
         panel_body: Based on the information provided you could be charged
         total_chargeable_days: 'Total chargeable days (capped at 4 weeks): %{days}'
         total_fee: 'Fee chargeable by supplier: %{fee}'
-        within_first_8_weeks: You're taking the worker on permanently within the first 12 working weeks so you can be charged a fee for taking the worker on permanently.
+        within_first_8_weeks: Based on the information you provided, you’re taking the worker on permanently within their first 12 working weeks, so you can be charged a fee.
         working_days: 'Working days between contract start (%{contract_start_date}) and hire date (%{hire_date}): %{days}'
         working_days_required: 'Minimum contract required: 60 working days (12 weeks)'
     journey:
