--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -332,11 +332,10 @@ en:
         results_found_with_location_html: "<strong>%{results}</strong> found within <strong>%{range}</strong> of <strong>%{postcode}</strong>."
     gateway:
       index:
-        cmp_support_aria_label: Email us for support with this service
         dfe_signin:
-          create_account_html: Contact %{link} if you don’t have an account and your school is in England. An account will be set up for you if you’re eligible and you’ll receive an invitation to use the service from DfE.
+          create_account_html: Complete <a href="%{url}">this form</a> if you don’t have an account.
           instructions: Sign in to your DfE Sign-In account to use this service. You will be automatically directed back to this service once you’ve signed in.
-          outside_england_html: If your school is in another part of the UK, you can’t use the digital service. Contact %{link} to check your eligibility and get help to access the agencies on the framework.
+          outside_england_html: Schools outside England and local authorities can’t use the digital service yet, but can use the framework to access the deal. Complete <a href="%{url}">the form</a> to let us know if you’d like to use the framework.
         heading: CCS Marketplace private beta
     home:
       temp_to_perm_fee:
