Add aria label to back navigation link

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -191,6 +191,7 @@ en:
   layouts:
     application:
       back: Back
+      back_aria_label: Back to the previous page
       beta: beta
       cookie_link: Cookies
       cookie_link_aria_label: How we use cookies
