--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -325,7 +325,7 @@ en:
           term: Term
           worker_type: Worker type
         inputs_header: Choices used to generate this list
-        mark-up_explanation_html: Results are sorted by mark-up from lowest to highest. Mark-up is the fee the supplier charges for their services. It’s a percentage added to the worker’s fee by the agency.
+        mark-up_explanation_html: Results are sorted by mark-up from lowest to highest. Mark-up is the percentage the agency charges on top of the charge for the worker. It includes things like overheads, the agencies’ profits and management charges.
         other_radius_html: 'Change this distance to: '
         page_title: Suppliers
         print: Print this page
