(chore) Change wording on looking for page to make more consistent

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -369,9 +369,9 @@ en:
         worker_term_question: How long does your school need the worker for?
         worker_type_question: What type of worker do you need?
       looking_for:
-        answer_calculate_temp_to_perm_fee: To calculate the fee you’ll be charged if you make an agency worker permanent
-        answer_managed_service_provider: An agency to manage all my needs - a ‘managed service provider’
-        answer_worker: An agency who can provide your school with an individual worker
+        answer_calculate_temp_to_perm_fee: To calculate the fee my school will be charged if I make an agency worker permanent
+        answer_managed_service_provider: An agency to manage all my school's needs - a ‘managed service provider’
+        answer_worker: An agency who can provide my school with an individual worker
         page_title: What is your school looking for?
         question: What is your school looking for?
       managed_service_provider:
