--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -337,9 +337,9 @@ en:
     gateway:
       index:
         dfe_signin:
-          create_account_html: Complete <a href="%{url}" aria-label="Crown Commercial Service contact form">this form</a> if you don’t have an account.
+          create_account_html: How do I know if I have a DfE Sign-in account? If you are from a not for profit school and your school is on the <a href="%{gias_url}" aria-label="Get Information About Schools register">Get Information About Schools (GIAS) register</a> you should be able to get a DfE Sign-in account. Please refer to <a href="%{dfe_sign_in_url}" aria-label="DfE Sign In contact form">this page</a> for more information on how the approver for your organisation can create an account for you.
           instructions: Sign in to your DfE Sign-In account to use this service. You will be automatically directed back to this service once you’ve signed in.
-          outside_england_html: Schools outside England and local authorities can’t use the digital service yet, but can use the framework to access the deal. Complete <a href="%{url}" aria-label="Crown Commercial Service contact form">the form</a> to let us know if you’d like to use the framework.
+          outside_england_html: Schools outside England cannot yet use the digital agency selection tool, but can request access to an offline (Excel) version of the tool by completing <a href="%{url}" aria-label="Crown Commercial Service contact form">this form</a> and stating 'offline agency selection tool' in the comments box.
         heading: CCS Marketplace private beta
     home:
       temp_to_perm_fee:
